aact-236:  Improve appearance of use case when it is shown. Display full-size image if user clicks on it.  Display the date/time the use case was created.  Fix alignment of image/text of heading/title.

--- a/app/assets/stylesheets/use_cases/use_cases.scss
+++ b/app/assets/stylesheets/use_cases/use_cases.scss
@@ -56,10 +56,16 @@ p, ul, li.useCaseInvitation {
 }
 
 #useCaseHeading {
-  color: black;
+  position: relative;
   font-weight: 300;
   font-size: 2rem;
   margin-bottom: 20px;
+  vertical-align: middle;
+}
+
+span.headingText {
+  padding-left: 20px;
+  vertical-align: top;
 }
 
 #useCase {
